--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -6,22 +6,23 @@ draw_bold_text_with_bright_colors = true
 
 [font]
 size = 12
+# normal = {family="ubuntu", style="Regular"}
 
-[font.bold]
-family = "Hack Nerd Font"
-style = "Bold"
-
-[font.bold_italic]
-family = "Hack Nerd Font"
-style = "Bold Italic"
-
-[font.italic]
-family = "Hack Nerd Font"
-style = "Italic"
-
-[font.normal]
-family = "Hack Nerd Font"
-style = "Regular"
+# [font.bold]
+# family = "Hack Nerd Font"
+# style = "Bold"
+#
+# [font.bold_italic]
+# family = "Hack Nerd Font"
+# style = "Bold Italic"
+#
+# [font.italic]
+# family = "Hack Nerd Font"
+# style = "Italic"
+#
+# [font.normal]
+# family = "Hack Nerd Font"
+# style = "Regular"
 
 [[keyboard.bindings]]
 action = "Paste"
