--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -71,6 +71,7 @@ program = "/usr/bin/fish"
 
 [window]
 dynamic_title = true
+decorations = "None"
 opacity = 0.92
 startup_mode = "Maximized"
 title = "eroblaze"
