--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,28 +1,12 @@
-import = ["/home/eroblaze/.config/alacritty/tokyonight_night.toml"]
-live_config_reload = true
 
 [colors]
 draw_bold_text_with_bright_colors = true
 
 [font]
-size = 11
-# normal = {family="ubuntu", style="Regular"}
+# normal = {family="Cascadia Code", style="Regular"} -- WHAT I'M CURRENTLY USING
 
-# [font.bold]
-# family = "Hack Nerd Font"
-# style = "Bold"
-#
-# [font.bold_italic]
-# family = "Hack Nerd Font"
-# style = "Bold Italic"
-#
-# [font.italic]
-# family = "Hack Nerd Font"
-# style = "Italic"
-#
-# [font.normal]
-# family = "Hack Nerd Font"
-# style = "Regular"
+# normal = {family="SourceCodePro", style="Regular"}
+# bold = {family="Hack Nerd Font", style = "bold"}
 
 [[keyboard.bindings]]
 action = "Paste"
@@ -45,11 +29,6 @@ key = "Equals"
 mods = "Control"
 
 [[keyboard.bindings]]
-action = "IncreaseFontSize"
-key = "Plus"
-mods = "Control"
-
-[[keyboard.bindings]]
 action = "DecreaseFontSize"
 key = "Minus"
 mods = "Control"
@@ -65,14 +44,11 @@ multiplier = 3
 [selection]
 save_to_clipboard = true
 
-[shell]
-args = ["-l", "-c", "tmux attach || tmux"]
-program = "/usr/bin/fish"
-
 [window]
 dynamic_title = true
 decorations = "None"
-opacity = 0.92
+#opacity = 0.92
+opacity = 1
 startup_mode = "Maximized"
 title = "eroblaze"
 
@@ -80,6 +56,10 @@ title = "eroblaze"
 general = "Alacritty"
 instance = "Alacritty"
 
-[window.padding]
-x = 0
-y = 0
+[general]
+live_config_reload = true
+import = ["/home/eroblaze/.config/alacritty/tokyonight_night.toml"]
+
+[terminal.shell]
+#args = ["-l", "-c", "tmux attach || tmux"]
+program = "/usr/bin/fish"
