--- a/.config/git/config
+++ b/.config/git/config
@@ -3,5 +3,9 @@
 [user]
 	name = Paul Eboselume
 	email = eboselumepaul@gmail.com
-[credential]
-	credentialStore = gpg
+[credential "https://github.com"]
+	helper = 
+	helper = !/usr/bin/gh auth git-credential
+[credential "https://gist.github.com"]
+	helper = 
+	helper = !/usr/bin/gh auth git-credential
