--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,8 +16,9 @@ monitor=LVDS-1,1366x768@60,0x0,1
 
 # Set programs that you use
 $terminal = alacritty
-$fileManager = dolphin
+$fileManager = nautilus
 $menu = wofi --show drun
+$editor = geany
 
 
 #################
@@ -26,6 +27,8 @@ $menu = wofi --show drun
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
+
+exec-once = hyprctl reload
 
 # exec-once = $terminal
 # exec-once = nm-applet &
@@ -53,6 +56,10 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 
+render {
+    cm_enabled = false
+}
+
 general {
     gaps_in = 2
     gaps_out = 5
@@ -60,7 +67,11 @@ general {
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    # col.active_border = rgba(11ee11ff) rgba(1111eeff) 45deg
+    # col.active_border = rgb(00FF7F)
+
+    col.active_border = rgb(A0D490)
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -79,13 +90,13 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 5
     rounding_power = 2
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 0.90
+    # active_opacity = 0.90
     # inactive_opacity = 1.0
-    inactive_opacity = 0.70
+    inactive_opacity = 0.80
     fullscreen_opacity = 1
 
     shadow {
@@ -209,17 +220,22 @@ device {
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = ALT # Sets "ALT" key as main modifier
 
-bind=$mainMod,F,fullscreen
+bind = $mainMod, N, exec, $editor # open geany
+
+bind = $mainMod, F, fullscreen
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
+bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, R, exec, $menu
 bind = $mainMod, C, killactive,
 bind = $mainMod, Q, exit,
-bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-# bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, T, togglesplit, # dwindle
+# bind = $mainMod, P, pseudo, # dwindle
+
+# Hyprpicker
+bind = $mainMod, P, exec, hyprpicker -a
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
