--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -17,7 +17,8 @@ monitor=LVDS-1,1366x768@60,0x0,1
 # Set programs that you use
 $terminal = alacritty
 $fileManager = nautilus
-$menu = wofi --show drun
+$menu = rofi -show drun
+$windows = rofi -show window
 $editor = geany
 
 
@@ -29,10 +30,7 @@ $editor = geany
 # Or execute your favorite apps at launch like this:
 
 exec-once = hyprctl reload
-
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
+exec-once = hyprpaper
 
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
@@ -94,8 +92,7 @@ decoration {
     rounding_power = 2
 
     # Change transparency of focused and unfocused windows
-    # active_opacity = 0.90
-    # inactive_opacity = 1.0
+# active_opacity = 1.0
     inactive_opacity = 0.80
     fullscreen_opacity = 1
 
@@ -228,6 +225,9 @@ bind = $mainMod, F, fullscreen
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, R, exec, $menu
+bind = $mainMod, tab, exec, $windows
+bind = $mainMod, D, exec, dunstctl close-all
+bind = $mainMod, Z, exec, dunstctl history-pop
 bind = $mainMod, C, killactive,
 bind = $mainMod, Q, exit,
 bind = $mainMod, V, togglefloating,
