--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -3,10 +3,8 @@
 draw_bold_text_with_bright_colors = true
 
 [font]
-# normal = {family="Cascadia Code", style="Regular"} -- WHAT I'M CURRENTLY USING
+normal = {family="CaskaydiaCove Nerd Font Mono", style="Regular"} 
 
-# normal = {family="SourceCodePro", style="Regular"}
-# bold = {family="Hack Nerd Font", style = "bold"}
 
 [keyboard]
 bindings = [
@@ -41,6 +39,6 @@ instance = "Alacritty"
 live_config_reload = true
 import = ["/home/eroblaze/.config/alacritty/tokyonight_night.toml"]
 
-[terminal.shell]
+# [terminal.shell]
 #args = ["-l", "-c", "tmux attach || tmux"]
-program = "/usr/bin/fish"
+# program = "/usr/bin/fish"
