--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,9 +1,15 @@
+[env]
+TERM = "xterm-256color"
 
 [colors]
 draw_bold_text_with_bright_colors = true
 
 [font]
-normal = {family="CaskaydiaCove Nerd Font Mono", style="Regular"} 
+# normal = {family="CaskaydiaCove Nerd Font Mono", style="Regular"} 
+normal = {family="CaskaydiaMono Nerd Font", style="Regular"} 
+bold = {family="CaskaydiaMono Nerd Font", style="Bold"} 
+italic = {family="CaskaydiaMono Nerd Font", style="Italic"} 
+size = 11
 
 
 [keyboard]
@@ -27,7 +33,7 @@ save_to_clipboard = true
 [window]
 dynamic_title = true
 dynamic_padding = true
-opacity = 1
+opacity = 0.98
 startup_mode = "Maximized"
 title = "eroblaze"
 
@@ -37,7 +43,8 @@ instance = "Alacritty"
 
 [general]
 live_config_reload = true
-import = ["/home/eroblaze/.config/alacritty/tokyonight_night.toml"]
+import = ["~/.config/omarchy/current/theme/alacritty.toml"]
+# import = ["/home/eroblaze/.config/alacritty/tokyonight_night.toml"]
 
 [terminal.shell]
 #args = ["-l", "-c", "tmux attach || tmux"]
