--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -25,7 +25,8 @@ bindd = $mainMod, C, Close active window, killactive
 # Control tiling
 bindd = $mainMod, T, Toggle split, togglesplit, # dwindle
 bindd = $mainMod, V, Toggle floating, togglefloating,
-bindd = SHIFT, F11, Force full screen, fullscreen, 0
+bindd = $mainMod, F, Full width, fullscreen, 1
+
 
 # Move focus with $mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
@@ -63,10 +64,6 @@ bindd = $mainMod SHIFT, right, Swap window to the right, swapwindow, r
 bindd = $mainMod SHIFT, up, Swap window up, swapwindow, u
 bindd = $mainMod SHIFT, down, Swap window down, swapwindow, d
 
-# Cycle through applications on active workspace
-bindd = SUPER, Tab, Cycle to next window, cyclenext
-bindd = SUPER, Tab, Reveal active window on top, bringactivetotop
-
 # Resize active window
 binde = $mainMod SHIFT, l, resizeactive, 30 0
 binde = $mainMod SHIFT, h, resizeactive, -30 0
@@ -85,12 +82,12 @@ bindmd = $mainMod, mouse:273, Resize window, resizewindow
 bindd = $mainMod, SPACE, Launch apps, exec, walker -p "Start…"
 bindd = $mainMod SHIFT, SPACE, Omarchy menu, exec, omarchy-menu
 bindd = $mainMod, ESCAPE, Power menu, exec, omarchy-menu system
-bindd = SUPER, K, Show key bindings, exec, omarchy-menu-keybindings
 
 # Aesthetics
 bindd = SUPER, SPACE, Toggle top bar, exec, pkill -SIGUSR1 waybar
 bindd = SUPER SHIFT, SPACE, Next background in theme, exec, omarchy-theme-bg-next
 bindd = SUPER CTRL, SPACE, Pick new theme, exec, omarchy-menu theme
+bindd = $mainMod, BACKSPACE, Toggle window transparency, exec, hyprctl dispatch setprop "address:$(hyprctl activewindow -j | jq -r '.address')" opaque toggle
 
 # Notifications
 bindd = $mainMod, COMMA, Dismiss last notification, exec, makoctl dismiss
