--- a/.config/hypr/ero_resets.conf
+++ b/.config/hypr/ero_resets.conf
@@ -9,6 +9,8 @@ unbind = SUPER, W
 unbind = SUPER, J 
 unbind = SUPER, P
 unbind = SUPER, V
+unbind = ALT, F11
+
 
 # Move focus with $mainMod + arrow keys
 unbind = SUPER, left
@@ -46,14 +48,11 @@ unbind = SUPER SHIFT, right
 unbind = SUPER SHIFT, up
 unbind = SUPER SHIFT, down
 
-# Cycle through applications on active workspace
-unbind = ALT, Tab
-
 # Resize active window
-unbind = SUPER, minus
-unbind = SUPER, equal
-unbind = SUPER SHIFT, minus
-unbind = SUPER SHIFT, equal
+unbind = SUPER, code:20
+unbind = SUPER, code:21
+unbind = SUPER SHIFT, code:20
+unbind = SUPER SHIFT, code:21
 
 # Scroll through existing workspaces with $mainMod + scroll
 unbind = SUPER, mouse_down 
@@ -67,12 +66,12 @@ unbind = SUPER, mouse:273
 unbind = SUPER, SPACE
 unbind = SUPER ALT, SPACE
 unbind = SUPER, ESCAPE
-unbind = SUPER, K
 
 # Aesthetics
 unbind = SUPER SHIFT, SPACE
 unbind = SUPER CTRL, SPACE
 unbind = SUPER SHIFT CTRL, SPACE
+unbind = SUPER, BACKSPACE
 
 # Notifications
 unbind = SUPER, COMMA
