--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -12,9 +12,9 @@ source = ~/.local/share/omarchy/default/hypr/windows.conf
 source = ~/.config/omarchy/current/theme/hyprland.conf
 
 # Change your own setup in these files (and overwrite any settings from defaults!)
-source = ~/.config/hypr/custom/ero_resets.conf
-source = ~/.config/hypr/custom/monitors.conf
-source = ~/.config/hypr/custom/input.conf
-source = ~/.config/hypr/custom/bindings.conf
-source = ~/.config/hypr/custom/envs.conf
-source = ~/.config/hypr/custom/autostart.conf
+source = ~/.config/hypr/ero_resets.conf
+source = ~/.config/hypr/monitors.conf
+source = ~/.config/hypr/input.conf
+source = ~/.config/hypr/bindings.conf
+source = ~/.config/hypr/envs.conf
+source = ~/.config/hypr/autostart.conf
