Updated CP config files

--- a/.config/hypr/input.conf
+++ b/.config/hypr/input.conf
@@ -19,3 +19,7 @@ input {
 
 # Scroll faster in the terminal
 windowrule = scrolltouchpad 1.5, class:Alacritty
+
+# Open Nautilus as a floating window
+windowrulev2 = float,class:org.gnome.Nautilus
+windowrulev2 = center,class:org.gnome.Nautilus
