--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -9,6 +9,7 @@ bindd = $mainMod, E, File manager, exec, uwsm app -- nautilus --new-window
 bindd = $mainMod, B, Browser, exec, $browser
 bindd = $mainMod, N, Neovim, exec, $terminal -e nvim
 bindd = $mainMod, A, Activity, exec, $terminal -e btop
+bindd = SUPER+Shift, Q, Relaunch Hyprland, exec, uwsm stop
 # bind = $mainMod, Q, exit
 
 # Switch workspaces to a relative workspace
@@ -47,16 +48,16 @@ bindd = $mainMod, code:18, Switch to workspace 9, workspace, 9
 bindd = $mainMod, code:19, Switch to workspace 10, workspace, 10
 
 # Move active window to a workspace with $mainMod + SHIFT + [0-9]
-bindd = $mainMod SHIFT, code:10, Move window to workspace 1, movetoworkspace, 1
-bindd = $mainMod SHIFT, code:11, Move window to workspace 2, movetoworkspace, 2
-bindd = $mainMod SHIFT, code:12, Move window to workspace 3, movetoworkspace, 3
-bindd = $mainMod SHIFT, code:13, Move window to workspace 4, movetoworkspace, 4
-bindd = $mainMod SHIFT, code:14, Move window to workspace 5, movetoworkspace, 5
-bindd = $mainMod SHIFT, code:15, Move window to workspace 6, movetoworkspace, 6
-bindd = $mainMod SHIFT, code:16, Move window to workspace 7, movetoworkspace, 7
-bindd = $mainMod SHIFT, code:17, Move window to workspace 8, movetoworkspace, 8
-bindd = $mainMod SHIFT, code:18, Move window to workspace 9, movetoworkspace, 9
-bindd = $mainMod SHIFT, code:19, Move window to workspace 10, movetoworkspace, 10
+bindd = $mainMod CTRL, code:10, Move window to workspace 1, movetoworkspace, 1
+bindd = $mainMod CTRL, code:11, Move window to workspace 2, movetoworkspace, 2
+bindd = $mainMod CTRL, code:12, Move window to workspace 3, movetoworkspace, 3
+bindd = $mainMod CTRL, code:13, Move window to workspace 4, movetoworkspace, 4
+bindd = $mainMod CTRL, code:14, Move window to workspace 5, movetoworkspace, 5
+bindd = $mainMod CTRL, code:15, Move window to workspace 6, movetoworkspace, 6
+bindd = $mainMod CTRL, code:16, Move window to workspace 7, movetoworkspace, 7
+bindd = $mainMod CTRL, code:17, Move window to workspace 8, movetoworkspace, 8
+bindd = $mainMod CTRL, code:18, Move window to workspace 9, movetoworkspace, 9
+bindd = $mainMod CTRL, code:19, Move window to workspace 10, movetoworkspace, 10
 
 # Swap active window with the one next to it with $mainMod + SHIFT + arrow keys
 bindd = $mainMod SHIFT, left, Swap window to the left, swapwindow, l
@@ -91,8 +92,8 @@ bindd = $mainMod, BACKSPACE, Toggle window transparency, exec, hyprctl dispatch 
 
 # Notifications
 bindd = $mainMod, COMMA, Dismiss last notification, exec, makoctl dismiss
-bindd = $mainMod SHIFT, COMMA, Dismiss all notifications, exec, makoctl dismiss --all
-bindd = $mainMod CTRL, COMMA, Toggle silencing notifications, exec, makoctl mode -t do-not-disturb && makoctl mode | grep -q 'do-not-disturb' && notify-send "Silenced notifications" || notify-send "Enabled notifications"
+bindd = $mainMod CTRL, COMMA, Dismiss all notifications, exec, makoctl dismiss --all
+bindd = $mainMod SHIFT, COMMA, Toggle silencing notifications, exec, makoctl mode -t do-not-disturb && makoctl mode | grep -q 'do-not-disturb' && notify-send "Silenced notifications" || notify-send "Enabled notifications"
 
 # Toggle nightlight
 bindd = $mainMod CTRL, N, Toggle nightlight, exec, omarchy-toggle-nightlight
