--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -19,3 +19,5 @@ source = ~/.config/hypr/input.conf
 source = ~/.config/hypr/bindings.conf
 source = ~/.config/hypr/envs.conf
 source = ~/.config/hypr/autostart.conf
+source = ~/.config/hypr/looknfeel.conf
+source = ~/.config/hypr/windows.conf
