--- a/.config/hypr/looknfeel.conf
+++ b/.config/hypr/looknfeel.conf
@@ -8,6 +8,9 @@ general {
 
     # Use master layout instead of dwindle
     # layout = master
+
+    # Set to true enable resizing windows by clicking and dragging on borders and gaps
+    resize_on_border = true
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
